Fixed spacing for project overview.

--- a/src/app/stylesheets/text.scss
+++ b/src/app/stylesheets/text.scss
@@ -3,7 +3,7 @@
 }
 
 .heading::after {
-  margin: 20px;
+  margin: 20px 0;
   display: block;
   content: " ";
   background: $black;
